--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "nameburg",
     "version": "2.0.1",
     "description": "nameburg app",
-    "main": "server.js",
+    "main": "app.js",
     "scripts": {
         "test": "jest",
-        "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "start": "node src/app.js",
+        "dev": "nodemon src/app.js"
     },
     "author": "",
     "license": "ISC",
