--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.3.1",
         "node-cron": "^3.0.2",
+        "stripe": "^13.3.0",
         "validator": "^13.9.0"
     },
     "devDependencies": {
