--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.3.1",
+        "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.2",
         "stripe": "^13.3.0",
         "validator": "^13.9.0"
