--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "2.0.1",
     "description": "nameburg app",
     "main": "app.js",
+    "engines": {
+        "node": "14.x"
+    },
     "scripts": {
         "test": "jest",
         "start": "node src/app.js",
