--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "mongoose": "^7.3.1",
         "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.2",
+        "sharp": "^0.32.6",
         "stripe": "^13.3.0",
         "validator": "^13.9.0"
     },
